1998-06-19  Chris Lahey  <clahey@umich.edu>

	* gE_document.c (gE_window_new): Changed some code in the
	WITHOUT_GNOME section to support the new accelerator system for
	those with cvs gtk and without gnome.

	* gE_document.c (gE_window_new): 
	* plugin.h: 
	* plugin.c (plugin_new): Changed plugin_init to plugin_new.  It
	explains the function much better.

	* hello.c (main): Fixed some segfaults.

1998-06-18  Chris Lahey  <clahey@umich.edu>

	* menus.c (get_main_menu):
	* main.h: 
	* menus.h: Changes to support both the old and new accelerator
	systems.  Not tested for 1.0 because I only have 1.1.

1998-06-17  Chris Lahey  <clahey@umich.edu>

	* hello.c (main): Added a check to see if it's being run as a
	plugin.  Also included the proper headers to get read of
	warnings.
	* main.h: Forgot to include plugin.h at the top of main.h.

1998-06-17  Chris Lahey  <clahey@umich.edu>

	* plugin.h: 
	* plugin.c: New files for plugins.
	* hello.c: The test plugin.  Needs manual compilation still.
	* gE_document.c, main.h: Changed to allow plugin test.  Changes
	are #defined out unless PLUGIN_TEST is defined non-zero.

	In general, this feature is not enabled by default.  This is the
	very first draft, just to make sure the inter process stuff is
	working.  To enable, compile hello.c and install it as
	/usr/local/bin/hello-plugin, uncomment the two new files in
	Makefile.am and define PLUGIN_TEST non-zero near the top of
	gE_document.c and main.h.

1998-06-10  Chris Lahey  <clahey@umich.edu>

	* menus.c (get_main_menu): 
	* menus.h: 
	* main.h: Switched to new accelerator system.

	* main.h: #included <stdio.h> to get declaration of size_t.

1998-05-28   <bse@dial.pipex.com>

	* Thanx to Eli Miller (spooge, his IRC nick) gEdit will now
	  re-size smaller than its startup size :)

1998-05-26   <evan@worldpath.net>

	* Fixed >2 New file bug

	* Fixed the bug wherein gedit was forced to strip non-ascii 
	  letters to keep from crashing on openning binary files,