@@ -1,3 +1,9 @@
+1998-06-20  Alex Roberts <bse@dial.pipex.com>
+
+	* Added 'Toolbar' to prefs file, if you select 'Turn Off Toolbar'
+	  it stys turned off even when you re-start gEdit ('Turn on toolbar'
+	  will keep it turned on)...
+
 1998-06-19  Chris Lahey  <clahey@umich.edu>
 
 	* gE_document.c (gE_window_new): Changed some code in the
@@ -10,6 +16,7 @@
 	explains the function much better.
 
 	* hello.c (main): Fixed some segfaults.
+
 
 1998-06-18  Chris Lahey  <clahey@umich.edu>
 
